# mymoney

./: .gitignore  Makefile  README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: cc6675e7577b_initial_schema.py  d55400ace6d4_add_language_to_user_settings.py  e4807eccbcc6_add_expense_payment_fields.py
backend/app/: config.py  database.py  main.py  seed.py
backend/app/graphql/: context.py  schema.py
backend/app/graphql/inputs/: expense.py  income.py  investment.py
backend/app/graphql/resolvers/: dashboard.py  expense.py  income.py  investment.py  settings.py
backend/app/graphql/types/: category.py  dashboard.py  expense.py  income.py  investment.py  portfolio.py  settings.py
backend/app/models/: __init__.py  asset.py  category.py  expense.py  income.py  portfolio.py  settings.py
backend/app/services/: dashboard_service.py  expense_service.py  income_service.py  investment_service.py  settings_service.py
backend/tests/: conftest.py  test_dashboard.py  test_expenses.py  test_investments.py
frontend/: codegen.ts  package-lock.json  package.json
frontend/src/: App.tsx  apollo.ts  index.css  main.tsx
frontend/src/components/dashboard/: ExpensePaymentCard.tsx  ExpenseSummaryCard.tsx  NetWorthCard.tsx  (+4 more)
frontend/src/context/: CurrencyContext.tsx  LanguageContext.tsx
frontend/src/pages/: AddExpensePage.tsx  AddIncomePage.tsx  AddInvestmentPage.tsx  DashboardPage.tsx  EditExpensePage.tsx  EditIncomePage.tsx  ExpensesPage.tsx  IncomePage.tsx  InvestmentsPage.tsx  SettingsPage.tsx
schema/: schema.graphql
(+25 files in other folders)
